# BookStore

./: CMakeLists.txt  README.md  README_simple.md
core/: Date.cpp  Date.h  DateTime.cpp  DateTime.h  FileTable.h  IdGenerator.cpp  IdGenerator.h  PathUtils.cpp  PathUtils.h  String.cpp  String.h
core/custom/: CaseSensitivity.h  CustomString.cpp  CustomString.h  DynamicArray.h  Optional.h  StdStringAdapter.h  StringList.h
data/reports/: report_MAT-20251102014954.txt  report_RP0001.txt  report_RP0002.txt  report_RP0003.txt  report_RP0004.txt  report_RP0005.txt
header/: BookStatus.h  QtBridge.h  SystemConfig.h
header/datafile/: BinaryFileStore.h  DataPaths.h
header/model/: Account.h  Book.h  Loan.h  Person.h  Reader.h  ReportRequest.h  Staff.h
header/repository/: AccountsRepository.h  BooksRepository.h  ConfigRepository.h  LoansRepository.h  ReadersRepository.h  ReportRequestRepository.h  StaffRepository.h
header/service/: AccountService.h  BookService.h  ConfigService.h  LoanService.h  ReaderService.h  (+2 more)
scoure/: BookStatus.cpp  QtBridge.cpp  main.cpp
tools/: convert_legacy_bin.cpp
ui/: AccountDialog.cpp  AccountDialog.h  BookDialog.cpp  BookDialog.h  DialogTheme.cpp  DialogTheme.h  LoanDialog.cpp  LoanDialog.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  PieChart.cpp  PieChart.h  ReaderDialog.cpp  ReaderDialog.h  ReportDetailsDialog.cpp  ReportDetailsDialog.h  ReportRequestDialog.cpp  ReportRequestDialog.h  StaffDialog.cpp  StaffDialog.h  StatsChart.cpp  StatsChart.h  StatsWidget.cpp  StatsWidget.h  mainwindow.ui
(+24 files in other folders)
